--- a/styles/mobile.sass
+++ b/styles/mobile.sass
@@ -1,13 +1,12 @@
 @import style
 @import colors
 
-#parent
-    width: 100%
+body
+    width: calc(100vw - 2%)
 
 header
     width: 100%
     display: flex
-    flex: 1
 
 .pc-only
     display: none
@@ -16,6 +15,8 @@ header
     display: block
 
 #nav-mobile
+    list-style: none
+    line-height: 5vh
     background-color: rgba(black, 0.1)
     padding: 5px 7px 5px 7px
     border-radius: 0 0 5px 5px
