--- a/styles/style.css
+++ b/styles/style.css
@@ -23,20 +23,30 @@
   --nav-icon: url("/assets/header/menu_black_36dp.svg");
 }
 
-body {
-  background-color: var(--bg);
+* {
+  box-sizing: border-box;
 }
 
-#parent {
+body {
+  background-color: var(--bg);
   color: var(--text);
+  /* main flex container */
   width: calc(100vw - 20%);
   margin: 0 auto 0 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  flex: 1 0 auto;
 }
 
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  /* decorative separator */
   border-bottom-style: dashed;
   border-bottom-width: 5px;
   border-bottom-color: rgb(167, 103, 7);
@@ -45,6 +55,7 @@ header h1 {
   color: rgb(167, 103, 7);
 }
 
+/* header icons */
 #toggle-theme {
   content: var(--theme-icon);
 }
@@ -63,13 +74,13 @@ header h1 {
   text-decoration: none;
 }
 
-.nav {
+.header-links {
   font-weight: 700;
 }
-.nav a {
+.header-links a {
   color: var(--text);
 }
-.nav a:visited {
+.header-links a:visited {
   color: rgb(167, 103, 7);
 }
 
@@ -92,4 +103,25 @@ header h1 {
 
 .mobile-only {
   display: none;
+}
+
+footer {
+  /* decorative border */
+  border-top-style: dashed;
+  border-top-width: 5px;
+  border-top-color: rgb(167, 103, 7);
+  /* flex positioning in relation to main */
+  flex-shrink: 0;
+  /* its own flex container for the ul + li children */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer ul {
+  list-style-type: none;
+  margin-right: 1vw;
+}
+footer ul li {
+  margin-right: 1vw;
+  display: inline-block;
 }/*# sourceMappingURL=style.css.map */
