--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -51,7 +51,7 @@ header {
   border-bottom-width: 5px;
   border-bottom-color: rgb(167, 103, 7);
 }
-header h1 {
+header h2 {
   color: rgb(167, 103, 7);
 }
 
@@ -64,6 +64,10 @@ header h1 {
   content: var(--nav-icon);
 }
 
+.nav-left {
+  display: flex;
+  align-items: center;
+}
 .nav-left a {
   text-decoration: none;
 }
@@ -72,16 +76,6 @@ header h1 {
 }
 .nav-left a:visited {
   text-decoration: none;
-}
-
-.header-links {
-  font-weight: 700;
-}
-.header-links a {
-  color: var(--text);
-}
-.header-links a:visited {
-  color: rgb(167, 103, 7);
 }
 
 .nav-right {
@@ -97,6 +91,16 @@ header h1 {
   display: inline-block;
 }
 
+.header-links {
+  font-weight: 700;
+}
+.header-links a {
+  color: var(--text);
+}
+.header-links a:visited {
+  color: rgb(167, 103, 7);
+}
+
 #nav-mobile {
   display: none;
 }
@@ -106,13 +110,19 @@ header h1 {
 }
 
 footer {
+  height: 25px;
+  /* decorative border */
   border-top-style: dashed;
   border-top-width: 5px;
   border-top-color: rgb(167, 103, 7);
+  /* flex positioning in relation to main */
   flex-shrink: 0;
+  /* its own flex container for the ul + li children */
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  /* text */
+  font-size: 12px;
 }
 footer ul {
   list-style-type: none;
